src/test/ui/suggestions/try-unimplemented.stderr
error[E0277]: the trait bound `u32: std::ops::Try` is not satisfied
  --> $DIR/try-unimplemented.rs:17:5
   |
17 |     3u32?
   |     -----
   |     |
   |     `?` cannot be applied to a value of type `u32`
   |     in this macro invocation
   |
   = help: the trait `std::ops::Try` is not implemented for `u32`
   = note: required by `std::ops::Try::into_result`

error[E0277]: the trait bound `(): std::ops::Try` is not satisfied
  --> $DIR/try-unimplemented.rs:21:5
   |
21 |     Ok(3u32)?;
   |     ---------
   |     |
   |     cannot use the `?` operator in a function that returns `()`
   |     in this macro invocation
   |
   = help: the trait `std::ops::Try` is not implemented for `()`
   = note: required by `std::ops::Try::from_error`

error: aborting due to 2 previous errors

